Fix spacing on selection window

--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,9 @@
 :root {
-  --main-pink: #f26bc3;
-  --main-blue: #9bc1f2;
+  --main-pink: #f72eb1;
+  --main-background: linear-gradient(
+    rgb(255, 103, 103) 60%,
+    rgba(255, 0, 0, 0)
+  );
   --main-green: #40df78;
   --main-yellow: #f2cb57;
 }
@@ -10,17 +13,28 @@
   padding: 0;
   text-align: center;
   border-radius: 10px;
+  font-family: "Electrolize", sans-serif;
 }
 button {
   background-color: var(--main-yellow);
+  min-width: 9vh;
+  min-height: 5vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+  padding: 10px;
 }
 body,
 .modal-content {
-  background-color: var(--main-blue);
+  height: 100vh;
+  background: rgb(224, 174, 255);
+  /* background: var(--main-background); */
   color: var(black);
 }
 h1 {
-  margin-top: 5vh;
+  padding-top: 5vh;
+  font-size: 4vh;
 }
 
 #main-wrapper {
@@ -35,12 +49,10 @@ h1 {
   position: relative;
   border: 3px solid black;
   box-sizing: border-box;
-  /* aspect-ratio: 1/1; */
   width: 50vw;
   height: 50vw;
   max-width: 450px;
   max-height: 450px;
-
   justify-self: center;
   display: flex;
   flex-wrap: wrap;
@@ -55,8 +67,7 @@ h1 {
   width: 100%;
   height: 100%;
   overflow: auto;
-  /* background-color: rgb(255, 255, 255);
-  background-color: rgba(255, 255, 255, 0.5); */
+  background-color: rgb(255, 255, 255);
 }
 
 #choice-modal {
@@ -68,8 +79,7 @@ h1 {
   width: 100%;
   height: 100%;
   overflow: auto;
-  /* background-color: rgb(255, 255, 255);
-  background-color: rgba(255, 255, 255, 0.5); */
+  background-color: rgb(255, 255, 255);
 }
 .modal-content {
   position: relative;
@@ -81,20 +91,31 @@ h1 {
   overflow: wrap;
   align-items: center;
   justify-content: center;
-  gap: 10vh;
+  gap: 2vh;
 }
 
 #selection-wrapper {
   width: 100%;
-  height: 30%;
+  height: 20%;
   display: flex;
   gap: 3vh;
   justify-content: center;
+  margin-bottom: 5vh;
 }
+
+.selection {
+  display: grid;
+  gap: 5px;
+}
+
+input {
+  min-height: 1.5rem;
+}
+
 .avatar-wrapper {
-  background-color: rgb(116, 237, 95);
-  height: 30vh;
-  width: 25vh;
+  /* background-color: rgb(116, 237, 95); */
+  height: 15vh;
+  width: 20vh;
 }
 
 .square {
@@ -111,7 +132,7 @@ h1 {
 }
 
 #players-wrapper {
-  margin-top: 8%;
+  margin-top: 4%;
   display: flex;
   justify-content: space-around;
 }
@@ -119,8 +140,13 @@ h1 {
 .player-wrapper {
   background-color: white;
   border: 2px solid black;
-  width: 15vh;
-  height: 8vh;
+  min-width: 15vh;
+  min-height: 6vh;
+  padding: 2px;
+}
+
+.score-display {
+  font-size: 2rem;
 }
 #extras-wrapper {
   justify-self: center;
